Thu Sep 18 13:53:37 2003  George Lebl <jirka@5z.com>

	* configure.in: update version

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c,
	  gui/greeter/greeter_session.c: treat SessionDesktopDir
	  as a PATH type variable using the first element.  This
	  will allow full interoperability with upcoming KDM
	  without sacrificing backcompat for GDM itself.  Also
	  it will be easier to change the dir in the future
	  this way.

	* config/gdm.conf.in: update for the path stuff

	* docs/C/gdm.xml: update for the path stuff

Thu Sep 18 03:33:44 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/cookie.c: Can't sleep, so re-clean the random
	  stuff.  This time really think about what's happening and document
	  the random tick stuff.  The random tick is now a lot faster too
	  after browsing the MT pseudorandom thing, what we were doing before
	  was just slow crap (not that slow, we're talking 'too slow for
	  sopwith').  But it was kind of embarassing I suppose.  I need to
	  think about such code before I use it.  Also really get all the
	  entropy we can get from the current time instead of just around
	  20 lousy bits.  So we need less ticks to get better entropy.

Wed Sep 17 10:14:27 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: the sessions dir is now commented out so that
	  we take the default rather then what's in the file by default.

Fri Sep 12 15:32:07 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.1

Fri Sep 12 15:29:05 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/cookie.c: a little bit of cleanup in the
	  random number department

Fri Sep 12 14:49:30 2003  George Lebl <jirka@5z.com>

	* configure.in: raise version

	* daemon/gdm-net.c: some cleanup and be utterly anal when creating /tmp/.gdm_socket
	  (note: we were anal before, but now we're really REALLY anal)

	* daemon/gdm.c: disable substituting 'nobody' for 'gdm', what was I
	  smoking when I wrote that?
