@@ -38,3 +38,4 @@
 #undef HAVE_LOGINCAP
 #undef HAVE_SYS_SOCKIO_H
 #undef HAVE_SCHED_YIELD
+#undef HAVE_SELINUX
