@@ -1,3 +1,8 @@
+Thu Sep 18 16:15:38 2003  George Lebl <jirka@5z.com>
+
+	* configure.in, acconfig.h, daemon/slave.c: apply the SELinux patch,
+	  taking care not to break the string freeze.
+
 Thu Sep 18 13:53:37 2003  George Lebl <jirka@5z.com>
 
 	* configure.in: update version
